Updated to use argparse4j

--- a/dctmutils/build.gradle
+++ b/dctmutils/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'net.sourceforge.argparse4j:argparse4j:0.9.0'
 
     implementation fileTree(dir:'C:/Program Files/Documentum/Shared', include: ['*.jar'])
 
