--- a/dctmutils/src/main/resources/dfc.properties
+++ b/dctmutils/src/main/resources/dfc.properties
@@ -1,8 +1,8 @@
-# dfc.data.dir=C\:/users/koepp/Documentum
-# dfc.tokenstorage.dir=C\:/users/koepp/Documentum/apptoken
+dfc.data.dir=C\:/users/koepp/Documentum
+dfc.tokenstorage.dir=C\:/users/koepp/Documentum/apptoken
 dfc.tokenstorage.enable=false
-dfc.docbroker.host[0]=dummy
-dfc.docbroker.port[0]=00
-dfc.globalregistry.repository=ddd
+dfc.docbroker.host[0]=ubuntu-mini.koeppster.lan
+dfc.docbroker.port[0]=30169
+dfc.globalregistry.repository=sandbox
 dfc.globalregistry.username=dm_bof_registry
 dfc.globalregistry.password=AAAAEEll+rDboJYX15I+RQ9yOfvyEaexUWjL3cZiIEkkNImw
