Updated for Docbroker Host and Port arg parsing

--- a/dctmutils/test/etc/dfc.properties
+++ b/dctmutils/test/etc/dfc.properties
@@ -1,5 +1,5 @@
-dfc.data.dir=C\:/users/koepp/Documentum
-dfc.tokenstorage.dir=C\:/users/koepp/Documentum/apptoken
+dfc.data.dir=dfcdata
+dfc.tokenstorage.dir=dfcdata/apptoken
 dfc.tokenstorage.enable=false
 dfc.docbroker.host[0]=ubuntu-mini.koeppster.lan
 dfc.docbroker.port[0]=30169
