--- a/dctmutils/build.gradle
+++ b/dctmutils/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'net.sourceforge.argparse4j:argparse4j:0.9.0'
+    implementation 'commons-io:commons-io:2.18.0'
 
     implementation fileTree(dir:'C:/Program Files/Documentum/Shared', include: ['*.jar'])
 
@@ -50,5 +51,21 @@ tasks.named('test') {
     testLogging {
         events "passed", "skipped", "failed"
         showStandardStreams = true
+    }
+    workingDir = file("$projectDir/test")
+}
+
+tasks.named('run') {
+    workingDir = file("$projectDir/test")
+    classpath += files("$projectDir/test/etc")
+    doFirst {
+        standardOutput = System.out
+        errorOutput = System.err
+    }
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11) // Specify your Java version
     }
 }
