--- a/dctmutils/test/etc/log4j2.properties
+++ b/dctmutils/test/etc/log4j2.properties
@@ -1,5 +1,5 @@
 rootLogger.level=WARN
-rootLogger.appenderRefs=A1, F1
+rootLogger.appenderRefs=F1
 rootLogger.appenderRef.A1.ref=STDOUT
 rootLogger.appenderRef.F1.ref=File
 monitorInterval=60
