--- a/dctmutils/build.gradle
+++ b/dctmutils/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'net.sourceforge.argparse4j:argparse4j:0.9.0'
     implementation 'commons-io:commons-io:2.18.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
     implementation fileTree(dir:'C:/Program Files/Documentum/Shared', include: ['*.jar'])
 
