--- a/dctmutils/build.gradle
+++ b/dctmutils/build.gradle
@@ -35,9 +35,8 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'net.sourceforge.argparse4j:argparse4j:0.9.0'
     implementation 'commons-io:commons-io:2.18.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
     implementation 'org.jasypt:jasypt:1.9.3'
-    implementation 'net.java.dev.jna:jna-platform:5.16.0'
+    implementation 'com.github.oshi:oshi-core-java11:6.6.5'
     implementation 'org.dizitart:nitrite-bom:4.3.0'
     implementation 'org.dizitart:nitrite:4.3.0'
     implementation 'org.dizitart:nitrite-jackson-mapper:4.3.0'
@@ -46,6 +45,7 @@ dependencies {
     implementation 'me.tongfei:progressbar:0.9.0'
     implementation 'org.slf4j:slf4j-nop:2.0.16'
     implementation 'org.apache.commons:commons-io:1.3.2'
+    implementation 'io.github.classgraph:classgraph:4.8.179'
     implementation fileTree(dir:'C:/Program Files/Documentum/Shared', include: ['*.jar'])
 
 }
